[package]
name = "js-visitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_allocator = "0.6.0"
oxc_ast = "0.6.0"
oxc_parser = "0.6.0"
oxc_span = "0.6.0"
walkdir = "2.4.0"

[[bin]]
name = "js-visitor"
path = "main.rs"
